Correct container for OOF inside rendered legend of multicol fieldset.

If a fieldset is a container for absolutely positioned descendants (e.g.
because it has position:relative), and there's an absolutely positioned
descendant inside, some extra skipping is required to locate the correct
containing block (i.e. the fieldset).

This:
  <fieldset style="columns:3; position:relative;">
    <legend>
      <div style="position:absolute;"></div>

Results in this:
  LayoutNGFieldset (relative positioned)
    LayoutNGBlockFlow (anonymous) (relative positioned)
      LayoutMultiColumnFlowThread (anonymous)
        LayoutNGBlockFlow LEGEND
          LayoutNGBlockFlow (positioned) DIV
      LayoutMultiColumnSet (anonymous) 0x2313bc3e2ce8

I.e. an anonyous box (multicol flow thread) inside another anonymous box
(fieldset contents wrapper). None of them can be a containing block of
something inside a rendered legend.

Bug: 874051
Change-Id: I725ae4dea5b4320868dd4aa51317fbc6db3c8f9b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2879018
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: Alison Maher <almaher@microsoft.com>
Reviewed-by: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#881534}